<resources>
    <string name="app_name">Rewards</string>
    <string name="login_background">login_background</string>
    <string name="logo">logo</string>
    <string name="name_image">name_image</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">LOGIN</string>
    <string name="CheckBox">Remember my credentials</string>
    <string name="createProfile">Tap here to create a profile</string>
    <string name="clearSavedAPI">Tap to clear saved API Key</string>
    <string name="studentEmail">Student Email (.edu)</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="studentID">Student Id Number</string>
    <string name="selectUserName">Select Username</string>
    <string name="departmentName">Department Name</string>
    <string name="positionTitle">Position Title</string>
    <string name="storyContent">Tell us something about yourself!</string>
    <string name="selectPassword">Select Password</string>
    <string name="profileFirstName">First Name</string>
    <string name="profileLastName">Last Name</string>
    <string name="storyTitle">Your Story:</string>
    <string name="profileImage">profileImage</string>
    <string name="rewardName">Reward Name</string>
    <string name="pointsAwarded">Points</string>
    <string name="pointsAwardedTitle">Points Awarded:</string>
    <string name="rewardDepartmentTitle">Department:</string>
    <string name="rewardImage">rewardImage</string>
    <string name="rewardSendPoint">Points</string>
    <string name="rewardStory">Story</string>
    <string name="rewardComment">Add comment for some one</string>
    <string name="rewardSendTitle">Reward points to send:</string>
    <string name="rewardCommentTitle">Comment:</string>
    <string name="rewardStoryTitle">Your Story:</string>
    <string name="rewardPositionTitle">Position:</string>
    <string name="rewardDepartment">department</string>
    <string name="rewardPosition">position</string>
    <string name="FullName">FullName</string>
    <string name="location">Location</string>
    <string name="num">num</string>
    <string name="position">Position:</string>
    <string name="points_to_award">Points to Award:</string>
    <string name="your_story">Your Story:</string>
    <string name="points">Points</string>
    <string name="reward_history">Reward History (0):</string>
    <string name="story_content">storyContent</string>
    <string name="profile_position">Position</string>
    <string name="points_awarded">Points Awarded:</string>
    <string name="profile_act_image">ProfileActImage</string>
    <string name="create_profile">Create Profile</string>
    <string name="preference">preference</string>
    <string name="edit">edit</string>
    <string name="leader_board">leader board</string>
    <string name="delete">delete</string>
    <string name="save">save</string>
</resources>