<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/selectUsername"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/selectUserName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/selectUserName"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/departmentName"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/departmentName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/departmentName"
        android:inputType="text"
        android:maxLength="30"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLastName" />

    <EditText
        android:id="@+id/positionTitle"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/positionTitle"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/positionTitle"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departmentName" />

    <EditText
        android:id="@+id/storyContent"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/storyContent"
        android:background="#ECEAEA"
        android:gravity="start|top"
        android:hint="@string/storyContent"
        android:inputType="text"
        android:maxLength="360"
        android:textColorHint="@color/orange_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyTitle" />

    <EditText
        android:id="@+id/selectPassword"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/selectPassword"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/selectPassword"
        android:inputType="textPassword"
        android:maxLength="40"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/selectUsername"
        app:layout_constraintTop_toBottomOf="@+id/selectUsername" />

    <EditText
        android:id="@+id/profileFirstName"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/profileFirstName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/profileFirstName"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/selectPassword"
        app:layout_constraintTop_toBottomOf="@+id/selectPassword" />

    <EditText
        android:id="@+id/profileLastName"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/profileLastName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/profileLastName"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/profileFirstName"
        app:layout_constraintTop_toBottomOf="@+id/profileFirstName" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="180dp"
        android:layout_height="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_photo" />

    <TextView
        android:id="@+id/storyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/storyTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/positionTitle"
        app:layout_constraintTop_toBottomOf="@+id/positionTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>