<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4">

    <TextView
        android:id="@+id/editProfileUsername"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/selectUserName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/selectUserName"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editProfileDepartment"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/departmentName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/departmentName"
        android:inputType="text"
        android:maxLength="30"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileLastName" />

    <EditText
        android:id="@+id/editPositionTitle"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/positionTitle"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/positionTitle"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileDepartment" />

    <EditText
        android:id="@+id/editStoryContent"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:minLines="10"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/storyContent"
        android:background="#ECEAEA"
        android:gravity="start|top"
        android:hint="@string/storyContent"
        android:maxLength="360"
        android:textColorHint="@color/orange_200"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editStoryTitle" />

    <EditText
        android:id="@+id/editProfilePassword"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/selectPassword"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/selectPassword"
        android:inputType="textPassword"
        android:maxLength="40"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editProfileUsername"
        app:layout_constraintTop_toBottomOf="@+id/editProfileUsername" />

    <EditText
        android:id="@+id/editProfileFirstName"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/profileFirstName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/profileFirstName"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editProfilePassword"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePassword" />

    <EditText
        android:id="@+id/editProfileLastName"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/profileLastName"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/profileLastName"
        android:inputType="text"
        android:maxLength="20"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editProfileFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editProfileFirstName" />

    <ImageView
        android:id="@+id/editProfileImage"
        android:layout_width="180dp"
        android:layout_height="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_photo" />

    <TextView
        android:id="@+id/editStoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/storyTitle"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editProfileImage"
        app:layout_constraintTop_toBottomOf="@+id/editPositionTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>