<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/API_firstname"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="firstname"
        android:maxLength="30"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/API_lastname"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="lastname"
        android:maxLength="30"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/API_firstname" />

    <EditText
        android:id="@+id/API_studentEmail"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="email"
        android:maxLength="30"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/studentEmail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/API_lastname" />

    <EditText
        android:id="@+id/API_studentID"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints="studentID"
        android:maxLength="15"
        android:background="#ECEAEA"
        android:gravity="center_vertical"
        android:hint="@string/studentID"
        android:inputType="number"
        android:textColorHint="@color/orange_200"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/API_studentEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>